# Praktica_kyrs_1

./: CMakeLists.txt  main.c
praktika_ex/: ex1.c  ex10.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c  ex7.c  ex8.c  ex9.c
