cmake_minimum_required(VERSION 3.26)
project(untitled C)

set(CMAKE_C_STANDARD 11)

add_executable(untitled main.c
        praktika_ex/ex1.c
        praktika_ex/ex2.c
        praktika_ex/ex3.c
        praktika_ex/ex4.c
        praktika_ex/ex5.c
        praktika_ex/ex6.c
        praktika_ex/ex7.c
        praktika_ex/ex8.c
        praktika_ex/ex9.c
        praktika_ex/ex10.c)
